@@ -53,6 +53,7 @@ pngoptimizer='none'          # png (watermark) optimizer (truepng, pingo, optipn
 webcam_overlay='false'       # webcam overlay effect (true, false)
 streaming='false'            # live streaming (true, false)
 one_step='false'             # one step process (true, false)
+one_step_lossless='false'    # one step process without encoding the lossless video (true, false)
 fixed_length='0'             # fixed length video in seconds (0 disable)
 notifications='true'         # desktop notifications (true, false)
 audio_input_setted='false'   # if audio input    was setted by cmd line with -i
@@ -74,6 +75,7 @@ webcam_input_setted='false'  # if webcam input   was setted by cmd line with -I
 webcam_size_setted='false'   # if webcam size    was setted by cmd line with -Z
 webcam_posi_setted='false'   # if wcam position  was setted by cmd line with -P
 webcam_rate_setted='false'   # if webcam fps     was setted by cmd line with -R
+one_step_setted='false'      # if one step       was setted by cmd line with -1
 fixed_length_setted='false'  # if fixed length   was setted by cmd line with -x
 pngoptimizer_setted='false'  # if png optimizer  was setted by cmd line with -g
 outputdir_setted='false'     # if output dir     was setted by cmd line with -o
